--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
     "name": "wifi-pass",
     "version": "0.1",
     "description": "Copy, QR encode or just get the password of current Wi-Fi connection",
-    "global": "true",
+    "global": "1",
     "scripts": [ "wifi-pass.sh" ],
-    "install": "make install",
+    "install": "install -b wifi-pass.sh ${PREFIX:-/usr/local}/bin/wifi-pass",
     "dependencies": {
         "qrencode": "master"
     }
