qrencode check & fixes
- Call with -qr now suggests to install qrencode package if it's missing. Installation uses brew so it even suggests to install missing Homebrew.
- v0.2.4
- Update fails now if it cannot get latest version info, so working as expected
- Replaced all tabs with spaces
- Fixed some exit codes

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "wifi-pass",
-    "version": "0.2.3",
+    "version": "0.2.4",
     "description": "Copy, QR encode or just get the password of current Wi-Fi connection",
     "global": "1",
-    "install": "install -b wifi-pass.sh ${PREFIX:-/usr/local}/bin/wifi-pass",
+    "install": "make",
     "scripts": [ "wifi-pass.sh" ],
     "author": {
         "name": "Arthur Factor",
